  - Add support for making queues exclusive.
  - Add documentation to roles.
  - Add TLS support
  - Fix die on AMQP server restart (RT#87705)
  - Fix docs regarding supported AMQP protocol versions (RT#94388)

0.003
  - Use core Message::Passing::Role::HasHostnameAndPort
  - Use core Message::Passing::Role::HasUsernameAndPassword
  - username, password, hostname attributes no longer default
    to a values, and must be user supplied.

0.002
  - Fix SYNOPSIS in documentation.
  - Add timeouts to tests to avoid hangs when they fail.
  - Fix for latest version of Message::Passing.
  - Emit warnings if output is a perl ref (i.e. hasn't
    been correctly serialized/encoded)

0.001
  - Initial barely working version
